Partially revert "Avoid overlap (#719)"
This reverts commit 4b166dcbf6685146292bf692eb6ccefaeded6807.

Fixes #722

--- a/extension/content.css
+++ b/extension/content.css
@@ -692,10 +692,7 @@ a.tabnav-extra[href$="mastering-markdown/"] {
 .pull-request-tab-content .diff-view .file-header {
 	position: sticky;
 	top: 60px;
-	z-index: 29; /* Just above .pr-toolbar */
-}
-.pr-toolbar-shadow {
-	z-index: 30; /* Just above .file-header */
+	z-index: 10;
 }
 
 /* Sticky file headers in regular file view */
